[homemade-v2] Add new logo and UX design

--- a/index.html
+++ b/index.html
@@ -3,31 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Delícias Caseiras</title>
+    <title>Amocê Dueto de Sabores</title>
+    <link rel="icon" href="img/logotipo_macedo__2_-removebg-preview.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Caveat:wght@400..700&family=Cedarville+Cursive&family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&family=Coming+Soon&family=Dawning+of+a+New+Day&family=Delius&family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Edu+VIC+WA+NT+Beginner:wght@400..700&family=Indie+Flower&family=Laila:wght@300;400&family=Mali:ital,wght@0,300;0,400;1,300&family=Marcellus+SC&family=Oswald:wght@300&family=Quintessential&family=Rajdhani:wght@300;400;500;600;700&family=Shadows+Into+Light&family=Slabo+27px&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <h1 class="cinzel-decorative-regular">Delícias Caseiras</h1>
-        <nav>
-            <ul class="cinzel-decorative-regular">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#contact">Contato</a></li>
-            </ul>
-        </nav>
+        <div class="header-content">
+            <img src="img/logotipo_macedo__2_-removebg-preview.ico" alt="Logo do Site" class="header-image">
+            <div class="header-text">
+                <h1 class="cinzel-decorative-regular">Amocê Dueto de Sabores</h1>
+                <nav>
+                    <ul class="cinzel-decorative-regular">
+                        <li><a href="#menu">Menu</a></li>
+                        <li><a href="#produtos">Produtos</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
-    <section id="home">
-        <div class="home-content">
-            <h2 class="delius-regular">Bem vindo(a) ao Delícias Caseiras!</h2>
-            <a href="#menu" class="btn">Explore nosso menu</a>
-        </div>
+    <section>
+        <section id="menu">
+            <h2 class="cinzel-decorative-regular">Nossos Produtos</h2>
+            <div class="cards-container">
+                <div class="card">
+                    <img src="img/202408182225.jpg" alt="Brownies Recheados">
+                    <h3 class="mali-regular">Brownies Recheados</h3>
+                    <p class="mali-light">Desfrute do nosso Brownie Recheado: a combinação 
+                        perfeita entre um exterior fudgy e um recheio surpreendente. Um 
+                        clássico reinventado para um prazer absoluto a qualquer hora!</p>
+                    <span class="delius-regular">R$12,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/226985_859315862ba42a8fea46453dd1372485-11_08_2024, 16_24_30.jpg" alt="Brownies com nozes e gotas de chocolate">
+                    <h3 class="mali-regular">Brownies com Nozes e Gotas de Chocolate</h3>
+                    <p class="mali-light">Sabor intenso com crocantes nozes e gotas de chocolate em cada pedaço. 
+                        Um brownie fudgy e delicioso, a escolha ideal para adoçar seu dia!</p>
+                    <span class="delius-regular">R$8,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/IMG-20240818-WA0037.jpg" alt="Brownies com chocolate nobre">
+                    <h3 class="mali-regular">Brownies com Chocolate Nobre</h3>
+                    <p class="mali-light">Sabor de excelência em cada mordida! Nossos Brownies com Chocolate 
+                        Nobre combinam uma textura fudgy com a riqueza intensa do chocolate premium. Um 
+                        deleite sofisticado para quem aprecia o verdadeiro sabor do chocolate.</p>
+                    <span class="delius-regular">R$8,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/IMG-20240818-WA0003.jpg" alt="Pão Sourdough Redondo">
+                    <h3 class="mali-regular">Pão Sourdough Redondo</h3>
+                    <p class="mali-light">Delicie-se com nosso Pão Sourdough Artesanal: crosta crocante 
+                        e interior macio, com um sabor único e levemente ácido. Perfeito para qualquer refeição!</p>
+                    <span class="delius-regular">R$25,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/IMG-20240818-WA0016.jpg" alt="Ciabatta de Fermentação Natural">
+                    <h3 class="mali-regular">Ciabatta de Fermentação Natural</h3>
+                    <p class="mali-light">Pão Ciabatta leve e crocante, com uma textura aerada e um 
+                        sabor levemente ácido. Perfeito para sanduíches ou para acompanhar suas refeições!</p>
+                    <span class="delius-regular">R$15,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/IMG-20240818-WA0026.jpg" alt="Focaccia">
+                    <h3 class="mali-regular">Focaccia de Fermentação Natural</h3>
+                    <p class="mali-light">Sabor irresistível em cada fatia! Nossa focaccia é macia e 
+                        levemente crocante, com um toque de ervas e azeite. Perfeita como acompanhamento 
+                        ou para um lanche saboroso. Disponível em dois sabores: Alecrim com sal grosso e 
+                        Tomate, alecrim e sal grosso</p>
+                    <span class="delius-regular">R$45,00</span>
+                </div>
+                <div class="card">
+                    <img src="img/IMG-20240818-WA0008.jpg" alt="Baguete">
+                    <h3 class="mali-regular">Baguete</h3>
+                    <p class="mali-light">Crosta crocante e miolo leve, nossa baguete é a escolha 
+                        perfeita para sanduíches ou para completar suas refeições com um toque de tradição.</p>
+                    <span class="delius-regular">R$15,00</span>
+                </div>
+            </div>
+        </section>
 
-        <div class="container">
+        <div class="container" id="produtos">
             <div class="left-panel">
                 <h2 class="delius-regular">Brownie de Chocolate Nobre</h2>
                 <p class="delius-regular">
@@ -62,48 +123,42 @@
         </div>
     </section>
 
-    <section id="menu">
-        <h2 class="cinzel-decorative-regular">Nossas Criações Caseiras</h2>
-        <div class="cards-container">
-            <div class="card">
-                <img src="img/[131] BROWNIE RECHEADO.jpg" alt="Brownies Recheados">
-                <h3 class="mali-regular">Brownies Recheados</h3>
-                <p class="mali-light">Desfrute do nosso Brownie Recheado: a combinação 
-                    perfeita entre um exterior fudgy e um recheio surpreendente. Cada 
-                    mordida revela um centro delicioso e derretido. Um clássico reinventado 
-                    para um prazer absoluto a qualquer hora!</p>
-                <span class="delius-regular">R$12,00</span>
-            </div>
-            <div class="card">
-                <img src="img/Brownies-Recipe-1-1200.jpg" alt="Brownies com nozes e gotas de chocolate">
-                <h3 class="mali-regular">Brownies com Nozes e Gotas de Chocolate</h3>
-                <p class="mali-light">Sabor irresistível em cada mordida! Nossos Brownies com Nozes e 
-                    Gotas de Chocolate oferecem uma combinação perfeita de texturas e sabores, com 
-                    crocantes nozes e pedaços de chocolate em um brownie fudgy. A escolha ideal para 
-                    adoçar seu dia!</p>
-                <span class="delius-regular">R$8,00</span>
-            </div>
-            <div class="card">
-                <img src="img/Brownies-Recipe-3-1200.jpg" alt="Brownies com chocolate nobre">
-                <h3 class="mali-regular">Brownies com Chocolate Nobre</h3>
-                <p class="mali-light">Sabor de excelência em cada mordida! Nossos Brownies com Chocolate 
-                    Nobre combinam uma textura fudgy com a riqueza intensa do chocolate premium. Um 
-                    deleite sofisticado para quem aprecia o verdadeiro sabor do chocolate.</p>
-                <span class="delius-regular">R$6,50</span>
-            </div>
-        </div>
-    </section>
-
     <section id="contact" class="contact-section">
         <h2 class="cinzel-decorative-regular">Faça Seu Pedido</h2>
         <p class="delius-regular">Para dúvidas ou pedidos, entre em contato através de nossas redes sociais:</p>
-        <!-- <p class="delius-regular">Pedido mínimo, taxa de entrega, locais de entrega e busca, sinal e pagamento na entrega, formas de pagamento, aceita encomendas para festa.</p> -->
         <a href="https://wa.me/+5519981256830" class="btn" target="_blank">WhatsApp</a>
         <a href="https://wa.me/+5519982758672" class="btn" target="_blank">Instagram</a>
     </section>
 
+    <section id="faq" class="faq-section">
+        <h2 class="cinzel-decorative-regular">Informações Importantes para Pedidos</h2>
+
+        <h3 class="delius-regular">Pedido Mínimo:</h3>
+        <p class="delius-regular">Para realizar um pedido, o valor mínimo é de R$30,00.</p>
+
+        <h3 class="delius-regular">Taxa de Entrega:</h3>
+        <p class="delius-regular">A taxa de entrega é de R$10,00 para pedidos dentro de um raio de 5 km. 
+            Para distâncias maiores, consulte-nos para mais detalhes.</p>
+
+        <h3 class="delius-regular">Locais de Entrega e Retirada:</h3>
+        <p class="delius-regular">Entregamos em Jardim Nova Europa, Jardim do Lago, Swiss Park, Centro e Cambuí. 
+            Se preferir, você pode retirar seu pedido diretamente em nosso local. Entre em contato para mais informações</p>
+
+        <h3 class="delius-regular">Sinal e Pagamento na Entrega:</h3>
+        <p class="delius-regular">Aceitamos um sinal de 50% do valor total do pedido na confirmação. 
+            O saldo restante pode ser pago na entrega.</p>
+
+        <h3 class="delius-regular">Formas de Pagamento:</h3>
+        <p class="delius-regular">Aceitamos pagamentos em dinheiro e PIX.</p>
+
+        <h3 class="delius-regular">Encomendas para Festas:</h3>
+        <p class="delius-regular">Sim, aceitamos encomendas para festas e eventos especiais! 
+            Entre em contato para discutir opções e personalizações.</p>
+
+    </section>
+    
     <footer>
-        <p>&copy; 2024 Delícias Caseiras. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Amocê Dueto de Sabores. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
