[homemade-v2] Fix punctuation and values

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p class="mali-light">Sabor irresistível em cada fatia! Nossa focaccia é macia e 
                         levemente crocante, com um toque de ervas e azeite. Perfeita como acompanhamento 
                         ou para um lanche saboroso. Disponível em dois sabores: Alecrim com sal grosso e 
-                        Tomate, alecrim e sal grosso</p>
+                        Tomate, alecrim e sal grosso;</p>
                     <span class="delius-regular">R$45,00</span>
                 </div>
                 <div class="card">
@@ -126,23 +126,24 @@
     <section id="contact" class="contact-section">
         <h2 class="cinzel-decorative-regular">Faça Seu Pedido</h2>
         <p class="delius-regular">Para dúvidas ou pedidos, entre em contato através de nossas redes sociais:</p>
-        <a href="https://wa.me/+5519981256830" class="btn" target="_blank">WhatsApp</a>
-        <a href="https://wa.me/+5519982758672" class="btn" target="_blank">Instagram</a>
+        <a href="https://wa.me/+5519981256830" class="btn" target="_blank">WhatsApp 1</a>
+        <a href="https://wa.me/+5519982758672" class="btn" target="_blank">WhatsApp 2</a>
     </section>
 
     <section id="faq" class="faq-section">
         <h2 class="cinzel-decorative-regular">Informações Importantes para Pedidos</h2>
 
         <h3 class="delius-regular">Pedido Mínimo:</h3>
-        <p class="delius-regular">Para realizar um pedido, o valor mínimo é de R$30,00.</p>
+        <p class="delius-regular">Para realizar um pedido, o valor mínimo é de R$25,00.</p>
 
         <h3 class="delius-regular">Taxa de Entrega:</h3>
         <p class="delius-regular">A taxa de entrega é de R$10,00 para pedidos dentro de um raio de 5 km. 
             Para distâncias maiores, consulte-nos para mais detalhes.</p>
 
         <h3 class="delius-regular">Locais de Entrega e Retirada:</h3>
-        <p class="delius-regular">Entregamos em Jardim Nova Europa, Jardim do Lago, Swiss Park, Centro e Cambuí. 
-            Se preferir, você pode retirar seu pedido diretamente em nosso local. Entre em contato para mais informações</p>
+        <p class="delius-regular">Entregamos em Jardim Nova Europa, Jardim das Bandeiras, Jardim do Lago, 
+            Swiss Park, Centro e Cambuí. Se preferir, você pode retirar seu pedido diretamente em nosso 
+            local. Entre em contato para mais informações.</p>
 
         <h3 class="delius-regular">Sinal e Pagamento na Entrega:</h3>
         <p class="delius-regular">Aceitamos um sinal de 50% do valor total do pedido na confirmação. 
