[homemade-v2] Fix punctuation and values

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p class="mali-light">Sabor irresistível em cada fatia! Nossa focaccia é macia e 
                         levemente crocante, com um toque de ervas e azeite. Perfeita como acompanhamento 
                         ou para um lanche saboroso. Disponível em dois sabores: Alecrim com sal grosso e 
-                        Tomate, alecrim e sal grosso;</p>
+                        Tomate, alecrim e sal grosso.</p>
                     <span class="delius-regular">R$45,00</span>
                 </div>
                 <div class="card">
